// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatSocials clicks on link 1`] = `
<body
  class="chakra-ui-dark"
>
  <div>
    <div
      class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
    >
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>
  <div
    class="chakra-portal"
  >
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
  </div>
</body>
`;

exports[`FloatSocials renders the float socials 1`] = `
<div>
  <div
    class="space-y-5 fixed bottom-8 left-8 hidden lg:flex flex-col"
  >
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="https://github.com/yonycalsin"
      rel="noreferrer"
      target="_blank"
    >
      Github
    </a>
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="https://www.linkedin.com/in/yonycalsin"
      rel="noreferrer"
      target="_blank"
    >
      Linkedin
    </a>
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="https://twitter.com/yonycalsin"
      rel="noreferrer"
      target="_blank"
    >
      Twitter
    </a>
    <a
      class="font-medium text-primary-600 dark:text-primary-500 hover:underline"
      href="mailto:helloyonycalsin@gmail.com"
      rel="noreferrer"
      target="_blank"
    >
      Email
    </a>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
